  it to count only non-amulet games when setting users_to_skip.

--Floating amulets never handed out if there are unpaired amulet games waiting
  or if the number of active players is less than 2 * N + 3, where N is the
  number of held amulets.

--Added display of randomly-matched amulet stakes to amulet holder before the
  start of an amulet game.






Version 18     2015-March-20

--Fixed a game-breaking bug in game results display screen (thanks claspa).




Version 17     2015-March-20

--Fixed failure to fetch amulet image and potential crash caused by this 
  failure (thanks ..)

--Fixed to clear NON-AMULET tool tip from CREATE button after dropping an
  amulet (thanks ..)

--Added held time and penalty rate to protocol so that client can display a
  realtime update of held-amulet score decay.

--Added a DROP AMULET button.






Version 16     Live Server Fixes

--Added retry-based work-around for deadlock in keepGameAlive.

--Fixed to go back into transaction after pulling a player out of a joined game
  and into an amulet game.

--Player picking up a free-floating amulet now scores 200 points on it.

--Added tracking of last time each player scored points on each amulet.

--Fixed to prevent currently-holding amulet player from being in wrong ordered
  spot on leaderboard.

--Removed pending amulet games from OTHER GAMES list on waiting screen
  (thanks ..)




Version 16     2015-March-18

--Added support for temporary logins to existing accounts with account details
  not saved locally.

--REFRESH button is now hidden for 5 seconds after a refresh to prevent refresh
  spam.

--Added missing webProxy setting file, and added note to readme
  (thanks chequers).

--Game flow now skips unecessary BET 0 steps if one player is out of coins.

--Fixed auto-completion of expiration date fields on deposite page when
  mouse-clicking out of fields instead of tabbing out (thanks Patrick T).

--Server and client support for amulet-passing contests.
