@@ -1,0 +1,3 @@
+ALTER TABLE minuetServer_games ADD player_1_got_start TINYINT NOT NULL AFTER game_square;
+
+ALTER TABLE minuetServer_games ADD player_2_got_start TINYINT NOT NULL AFTER player_1_got_start;
